# voice-agent

./: .gitignore  ARCHITECTURE.md  Demo.mkv  README.md  main.py  pyproject.toml
static/: index.html  main.js  style.css
