[tool.poetry]
name = "voice-agent"
version = "0.1.0"
description = ""
authors = ["Tapio Ikimaa <tapio@ikimaa.fi>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.13"
fastapi = "^0.116.1"
uvicorn = "^0.35.0"
transformers = {extras = ["torch"], version = "^4.53.2"}
python-dotenv = "^1.1.1"
websockets = "^15.0.1"
torchaudio = "^2.7.1"
faster-whisper = "^1.1.1"
python-multipart = "^0.0.20"
soundfile = "^0.13.1"
sentence-transformers = "^2.2.2"
tiktoken = "^0.9.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
